--- a/urban.html
+++ b/urban.html
@@ -40,7 +40,7 @@
 				  <h1>Kuvia kaupungeista, matkoilta ja jokapäiväisestä elämästä.</h1></div>
 		  	</div>
  <div class="container-fluid justify-content-center" style="padding-left: 300px; padding-right: 300px">
-        <div class="row galleria mx-auto" style="margin-top:200px">
+        <div class="row galleria mx-auto" style="margin-top:200px margin-top:150px">
             <div class="col-md-3">
 			<a class="gallery" href="P5260143.jpg" data-toggle="lightbox" data-gallery="example-gallery">
                 <img src="P5260143-640x480.jpg" class="img-fluid image-gallery" style="width:100%" alt="Bertta sleeps">
