--- a/landscapes.html
+++ b/landscapes.html
@@ -40,7 +40,7 @@
 		  	</div>
 	  </div>
  <div class="container-fluid justify-content-center" style="padding-left: 300px; padding-right: 300px">
-        <div class="row galleria mx-auto" style="margin-top:200px margin-bottom:150px">
+        <div class="row galleria mx-auto" style="margin-top:200px; margin-bottom:150px">
             <div class="col-md-3">
 			<a class="gallery" href="corfu.jpg" data-toggle="lightbox" data-gallery="example-gallery">
                 <img src="corfu-640x480.jpg" class="img-fluid image-gallery" style="width:100%" alt="Kassiopi, Corfu">
