--- a/landscapes.html
+++ b/landscapes.html
@@ -39,7 +39,7 @@
 				  <h1>Maisema- ja luontokuvia läheltä ja kauempaa.</h1></div>
 		  	</div>
 	  </div>
- <div class="container-fluid justify-content-center" style="padding-left: 300px; padding-right: 300px; margin-bottom:150px">
+ <div class="container-fluid justify-content-center" style="margin-bottom:150px">
         <div class="row galleria mx-auto" style="margin-top:200px">
             <div class="col-md-3">
 			<a class="gallery" href="corfu.jpg" data-toggle="lightbox" data-gallery="example-gallery">
