--- a/urban.html
+++ b/urban.html
@@ -39,7 +39,7 @@
 				<div class="col-12 d-flex justify-content-center">
 				  <h1>Kuvia kaupungeista, matkoilta ja jokapäiväisestä elämästä.</h1></div>
 		  	</div>
- <div class="container-fluid justify-content-center" style="padding-left: 300px; padding-right: 300px; margin-bottom:100px">
+ <div class="container-fluid justify-content-center" style="margin-bottom:100px">
         <div class="row galleria mx-auto" style="margin-top:200px">
             <div class="col-md-3">
 			<a class="gallery" href="P5260143.jpg" data-toggle="lightbox" data-gallery="example-gallery">
