--- a/urban.html
+++ b/urban.html
@@ -108,7 +108,7 @@
 		</div>
 	 </div>
 	<div class="container-fluid">
-		<div class="row crmark">
+		<div class="row">
 			<div class="col-md-12">&copy;Valtteri Vikström</div>
 	  </div>  
 	</div>
