--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  	  
 			  
 	<div class="container-fluid">
-		<div class="row crmark">
+		<div class="row">
 			<div class="col-md-12">&copy;Valtteri Vikström</div>
 	  </div>  
 	</div>
