--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 	  </div>
 
 		<div class="container-fluid">
-		<div class="row crmark">
+		<div class="row">
 			<div class="col-md-12">&copy;Valtteri Vikström</div>
 	  </div>  
 	</div>
