--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 	<div class="container" style="margin-top:100px">
 	<div class="row">
 		<div class="col-md-4"><img src="me_front_left.jpg" class="img-fluid rounded contact-image" alt="photo_of_me"></div>
-		<div class="col-md-6"><h5>Otathan yhteyttä, jos olet haluat käyttää kuviani tai sinulla on muuta asiaa!<br><br>
+		<div class="col-md-6"><h5>Alta löydät sähköpostiosoitteeni. Otathan yhteyttä mikäli haluat käyttää kuviani tai haluat keskustella valokuvistani tai valokuvauksesta yleisesti.<br><br>
 		Email: valtterivee@hotmail.com</h5>
 		  
 		</div>
