--- a/contact.html
+++ b/contact.html
@@ -35,15 +35,15 @@
 	<div class="container" style="margin-top:100px">
 	<div class="row">
 		<div class="col-md-4"><img src="me_front_left.jpg" class="img-fluid rounded contact-image" alt="photo_of_me"></div>
-		<div class="col-md-6"><h5>Alta löydät sähköpostiosoitteeni. Otathan yhteyttä mikäli haluat käyttää kuviani tai haluat keskustella valokuvistani tai valokuvauksesta yleisesti.<br><br>
-		Email: valtterivee@hotmail.com</h5>
+		<div class="col-md-6"><h5 style="padding:10px">Mikäli olet kiinnostunut kuvieni käyttöoikeuksista tai haluat ihan vain vaihtaa ajatuksia valokuvauksesta, ota rohkeasti yhteyttä<br><br>
+		Email: valtterivee [at] hotmail.com</h5>
 		  
 		</div>
 		</div>
 	  </div>
 
 		<div class="container-fluid">
-		<div class="row">
+		<div class="row crmark">
 			<div class="col-md-12">&copy;Valtteri Vikström</div>
 	  </div>  
 	</div>
