--- a/index.html
+++ b/index.html
@@ -34,23 +34,26 @@
 	</div>
 	  
 	  <div class="container-fluid">
-			<div class="row" style="padding-top:70px">
-				<div class="col-12 d-flex justify-content-center">
-				  <h1>Maailma harrastevalokuvaajan silmin!</h1></div>
-		  	</div>
-	</div>
-		  <div class="row" style="margin-top:70px">
+	
+		  <div class="row">
+			  <div class="col-md-12"><img src="_DSF5478.jpg" class="img-fluid bannerimage" alt="Katajanokka"><div class="centered"><h1 class="banner">Maailma harrastevalokuvaajan silmin!</h1></div></div>
+		  </div>
+			<div class="row" style="margin-top: 20px">
 		  	<div class="col-md-6 d-flex justify-content-end"><a class="gallery" href="landscapes.html"><img src="landscapes_nature.png" class="img-fluid front-image" alt="landscapes and nature">
 			</a></div>
 		  	<div class="col-md-6 d-flex justify-content-left"><a class="gallery" href="urban.html"><img src="Urban_everyday.png" class="img-fluid front-image" alt="urban and everyday"></a></div>	
-		  </div>
-	  	  
-			  
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-12">&copy;Valtteri Vikström</div>
-	  </div>  
-	</div>
+		  	</div>
+	 	</div>
+	
+	<footer>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-11 col-sm-7">
+                    <p class="alaosio">&copy;Valtteri Vikström</p>
+                </div>
+            </div>
+        </div>
+    </footer>		  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -58,3 +61,4 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
+
