--- a/landscapes.html
+++ b/landscapes.html
@@ -36,11 +36,11 @@
 	  	  <div class="container-fluid">
 			<div class="row" style="padding-top:70px">
 				<div class="col-12 d-flex justify-content-center">
-				  <h1>Maisema- ja luontokuvia läheltä ja kauempaa.</h1></div>
+				  <h1 class="teksti">Maisema- ja luontokuvia läheltä ja kauempaa.</h1></div>
 		  	</div>
 	  </div>
- <div class="container-fluid justify-content-center" style="margin-bottom:150px">
-        <div class="row galleria mx-auto" style="margin-top:200px">
+ <div class="container-fluid justify-content-center" style="margin-bottom:100px; width: 80%">
+        <div class="row galleria mx-auto" style="margin-top:70px">
             <div class="col-md-3">
 			<a class="gallery" href="corfu.jpg" data-toggle="lightbox" data-gallery="example-gallery">
                 <img src="corfu-640x480.jpg" class="img-fluid image-gallery" style="width:100%" alt="Kassiopi, Corfu">
