--- a/urban.html
+++ b/urban.html
@@ -37,10 +37,10 @@
 	<div class="container-fluid">
 			<div class="row" style="padding-top:70px">
 				<div class="col-12 d-flex justify-content-center">
-				  <h1>Kuvia kaupungeista, matkoilta ja jokapäiväisestä elämästä.</h1></div>
+				  <h1 class="teksti">Kuvia kaupungeista, matkoilta ja jokapäiväisestä elämästä.</h1></div>
 		  	</div>
- <div class="container-fluid justify-content-center" style="margin-bottom:100px">
-        <div class="row galleria mx-auto" style="margin-top:200px">
+ <div class="container-fluid justify-content-center" style="margin-bottom:100px; width: 80%">
+        <div class="row galleria mx-auto" style="margin-top:70px">
             <div class="col-md-3">
 			<a class="gallery" href="P5260143.jpg" data-toggle="lightbox" data-gallery="example-gallery">
                 <img src="P5260143-640x480.jpg" class="img-fluid image-gallery" style="width:100%" alt="Bertta sleeps">
