--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	  <div class="container-fluid">
 	
 		  <div class="row">
-			  <div class="col-md-12"><img src="_DSF5478.jpg" class="img-fluid bannerimage" alt="Katajanokka"><div class="centered"><h1 class="banner">Maailma harrastevalokuvaajan silmin!</h1></div></div>
+			  <div class="col-md-12"><img src="DSF5478.jpg" class="img-fluid bannerimage" alt="Katajanokka"><div class="centered"><h1 class="banner">Maailma harrastevalokuvaajan silmin!</h1></div></div>
 		  </div>
 			<div class="row" style="margin-top: 20px">
 		  	<div class="col-md-6 d-flex justify-content-end"><a class="gallery" href="landscapes.html"><img src="landscapes_nature.png" class="img-fluid front-image" alt="landscapes and nature">
