--- a/urban.html
+++ b/urban.html
@@ -37,7 +37,7 @@
 	<div class="container-fluid">
 			<div class="row" style="padding-top:70px">
 				<div class="col-12 d-flex justify-content-center">
-				  <h1 class="teksti">Kuvia kaupungeista, matkoilta ja jokapäiväisestä elämästä.</h1></div>
+				  <h1 class="teksti gallerytext">Kuvia kaupungeista, matkoilta ja jokapäiväisestä elämästä.</h1></div>
 		  	</div>
  <div class="container-fluid justify-content-center" style="margin-bottom:100px; width: 80%">
         <div class="row galleria mx-auto" style="margin-top:70px">
