--- a/landscapes.html
+++ b/landscapes.html
@@ -36,7 +36,7 @@
 	  	  <div class="container-fluid">
 			<div class="row" style="padding-top:70px">
 				<div class="col-12 d-flex justify-content-center">
-				  <h1 class="teksti">Maisema- ja luontokuvia läheltä ja kauempaa.</h1></div>
+				  <h1 class="teksti gallerytext">Maisema- ja luontokuvia läheltä ja kauempaa.</h1></div>
 		  	</div>
 	  </div>
  <div class="container-fluid justify-content-center" style="margin-bottom:100px; width: 80%">
